-- =========================================================
-- Restaurant Database — Schema: restaurantschema
-- =========================================================

Create Schema restaurantschema;

-- =========================================================
-- 1. TABLES
-- =========================================================

-- Physical address of a restaurant location.
Create Table restaurantschema.Locations(
	LocationId Int Generated By Default As Identity Primary Key,
	Address Varchar(255)
);

-- One row per restaurant. LocationId is UNIQUE: one location belongs to exactly one restaurant (1-to-1).
Create Table restaurantschema.Restaurants(
	RestaurantId Int Generated By Default As Identity Primary Key,
	Name Varchar(100) Not Null,
	Rating Int,
	LocationId Int Unique,

	Constraint fk_restaurant_location Foreign Key (LocationId)
		References restaurantschema.Locations(LocationId)
		On Delete Set Null
);

-- Lookup table of staff roles (cook, waiter, manager, etc).
Create Table restaurantschema.StaffRoles(
	StaffRoleId Int Generated By Default As Identity Primary Key,
	RoleName Varchar(50) Not Null Unique,
	Description Varchar(255)
);

-- Employees. Every staff member has one role.
Create Table restaurantschema.Staff(
	StaffId Int Generated By Default As Identity Primary Key,
	StaffRoleId Int,
	Name Varchar(100) Not Null,
	Address Varchar(255),
	Phone Varchar(35),

	Constraint fk_staff_role Foreign Key (StaffRoleId)
		References restaurantschema.StaffRoles(StaffRoleId)
		On Delete Set Null
);

-- M:N: one staff member can work at several restaurants.
Create Table restaurantschema.StaffRestaurantJunctionTable(
	StaffId Bigint,
	RestaurantId Bigint,

	Primary Key (StaffId, RestaurantId),

	Constraint fk_staffrest_staff Foreign Key (StaffId)
		References restaurantschema.Staff(StaffId)
		On Delete Cascade,

	Constraint fk_staffrest_restaurant Foreign Key (RestaurantId)
		References restaurantschema.Restaurants(RestaurantId)
		On Delete Cascade
);

-- Work shifts. Own surrogate key, direct FKs to Staff and Restaurant (a shift always concerns one staff member at one restaurant).
Create Table restaurantschema.ShiftSchedules_JunctionTable(
	ShiftScheduleId Bigint Generated By Default As Identity Primary Key,
	StaffId Bigint Not Null,
	RestaurantId Bigint Not Null,
	StartDateTime Timestamp Not Null,
	EndDateTime Timestamp Not Null,

	Constraint fk_shift_staff Foreign Key (StaffId)
		References restaurantschema.Staff(StaffId)
		On Delete Cascade,

	Constraint fk_shift_restaurant Foreign Key (RestaurantId)
		References restaurantschema.Restaurants(RestaurantId)
		On Delete Cascade,

	-- Basic sanity check: a shift must end after it starts.
	Constraint chk_shift_dates Check (EndDateTime > StartDateTime)
);

-- Lookup table for menu item categories (appetizer, dessert, etc).
Create Table restaurantschema.MenuItemCategory(
	CategoryId Int Generated By Default As Identity Primary Key,
	CategoryName Varchar(30) Not Null
);

-- Menu items (dishes/drinks).
Create Table restaurantschema.MenuItems(
	MenuItemId Bigint Generated By Default As Identity Primary Key,
	Name Varchar(100) Not Null,
	Description Varchar(255),
	Weight Numeric(6,2),
	Price Numeric(10,2) Not Null,
	CategoryId Int,

	Constraint fk_menuitem_category Foreign Key (CategoryId)
		References restaurantschema.MenuItemCategory(CategoryId)
		On Delete Set Null
);

-- M:N: which menu items are sold at which restaurants.
Create Table restaurantschema.RestaurantMenuItemsJunctionTable(
	RestaurantId Bigint,
	MenuItemId Bigint,

	Primary Key (RestaurantId, MenuItemId),

	Constraint fk_restmenu_restaurant Foreign Key (RestaurantId)
		References restaurantschema.Restaurants(RestaurantId)
		On Delete Cascade,

	Constraint fk_restmenu_menuitem Foreign Key (MenuItemId)
		References restaurantschema.MenuItems(MenuItemId)
		On Delete Cascade
);

-- Catalog / master data: "what a dish can be made of". Stable, rarely changes.
Create Table restaurantschema.Ingredients(
	IngredientId Int Generated By Default As Identity Primary Key,
	Name Varchar(100) Not Null,
	Weight Numeric(6,2),
	Quantity Int Default 0
);

-- M:N: recipe composition. A dish has many ingredients, an ingredient is used in many dishes. Own surrogate key.
Create Table restaurantschema.MenuItemIngredientsJunctionTable(
	ElementId Int Generated By Default As Identity Primary Key,
	MenuItemId Bigint Not Null,
	IngredientId Int Not Null,

	Constraint fk_menuingr_menuitem Foreign Key (MenuItemId)
		References restaurantschema.MenuItems(MenuItemId)
		On Delete Cascade,

	Constraint fk_menuingr_ingredient Foreign Key (IngredientId)
		References restaurantschema.Ingredients(IngredientId)
		On Delete Restrict,

	Constraint uq_menuingr_pair Unique (MenuItemId, IngredientId)
);

-- Operational / warehouse data: "how much is physically on stock right now, which batch, when it expires". Changes constantly.
-- One Ingredient -> many BasicInventory records (1:N), because the same ingredient arrives in different deliveries with different quantities and expiration dates.
Create Table restaurantschema.BasicInventories(
	BasicInventoryId Int Generated By Default As Identity Primary Key,
	IngredientId Int,
	Name Varchar(30),
	Count Bigint Default 0,

	Constraint fk_inventory_ingredient Foreign Key (IngredientId)
		References restaurantschema.Ingredients(IngredientId)
		On Delete Set Null
);

-- M:N: an inventory batch can be tracked across restaurants.
Create Table restaurantschema.RestaurantInventoryJunctionTable(
	ElementId Int Generated By Default As Identity Primary Key,
	RestaurantId Bigint Not Null,
	BasicInventoryId Bigint Not Null,

	Constraint fk_restinv_restaurant Foreign Key (RestaurantId)
		References restaurantschema.Restaurants(RestaurantId)
		On Delete Cascade,

	Constraint fk_restinv_inventory Foreign Key (BasicInventoryId)
		References restaurantschema.BasicInventories(BasicInventoryId)
		On Delete Cascade,

	Constraint uq_restinv_pair Unique (RestaurantId, BasicInventoryId)
);

-- Companies that supply inventory items.
Create Table restaurantschema.Suppliers(
	SupplierId Int Generated By Default As Identity Primary Key,
	Name Varchar(30) Not Null,
	Address Varchar(100),
	Phone Varchar(35)
);

-- M:N: a supplier can provide many inventory items, an item can come from several suppliers.
Create Table restaurantschema.BasicInventoriesSuppliersJunctionTable(
	SupplierId Bigint,
	BasicInventoryId Bigint,

	Primary Key (SupplierId, BasicInventoryId),

	Constraint fk_invsup_supplier Foreign Key (SupplierId)
		References restaurantschema.Suppliers(SupplierId)
		On Delete Cascade,

	Constraint fk_invsup_inventory Foreign Key (BasicInventoryId)
		References restaurantschema.BasicInventories(BasicInventoryId)
		On Delete Cascade
);

-- Physical tables inside a restaurant (for seating). Direct FK: one table belongs to exactly one restaurant (1:N), no junction needed.
Create Table restaurantschema.RestaurantTables(
	TableId Int Generated By Default As Identity Primary Key,
	RestaurantId Bigint Not Null,
	SizeOfTable Int Not Null,

	Constraint fk_table_restaurant Foreign Key (RestaurantId)
		References restaurantschema.Restaurants(RestaurantId)
		On Delete Cascade
);

-- Customers.
Create Table restaurantschema.Customers(
	CustomerId Int Generated By Default As Identity Primary Key,
	Name Varchar(100) Not Null,
	Phone Varchar(35)
);

-- Table reservations made by customers.
Create Table restaurantschema.Reservations(
	ReservationId Int Generated By Default As Identity Primary Key,
	TableId Bigint Not Null,
	CustomerId Bigint Not Null,
	ReservationDateTime Timestamp Not Null,
	NumberOfPeople Int Not Null,

	Constraint fk_reservation_table Foreign Key (TableId)
		References restaurantschema.RestaurantTables(TableId)
		On Delete Restrict,

	Constraint fk_reservation_customer Foreign Key (CustomerId)
		References restaurantschema.Customers(CustomerId)
		On Delete Restrict,

	Constraint chk_reservation_people Check (NumberOfPeople > 0)
);

-- Customer feedback/rating about a specific restaurant.
Create Table restaurantschema.CustomerFeedbacks(
	FeedbackId Int Generated By Default As Identity Primary Key,
	CustomerId Bigint Not Null,
	RestaurantId Bigint Not Null,
	Rating Int Not Null,
	Comment Varchar(500),

	Constraint fk_feedback_customer Foreign Key (CustomerId)
		References restaurantschema.Customers(CustomerId)
		On Delete Restrict,

	Constraint fk_feedback_restaurant Foreign Key (RestaurantId)
		References restaurantschema.Restaurants(RestaurantId)
		On Delete Cascade,

	Constraint chk_feedback_rating Check (Rating Between 1 And 5)
);

-- Lookup table for order types (dine-in, takeaway, delivery).
Create Table restaurantschema.OrderTypes(
	OrderTypeId Int Generated By Default As Identity Primary Key,
	NameOfType Varchar(20) Not Null Unique
);

-- Order header: who ordered, at which table, what type, status.
-- Which dishes are in the order is stored separately, in MenuItems_Orders_JunctionTable (this lets one order contain several menu items).
Create Table restaurantschema.Orders(
	OrderId Int Generated By Default As Identity Primary Key,
	TableId Bigint,
	OrderTypeId Bigint Not Null,
	CustomerId Bigint Not Null,
	Status Varchar(20) Default 'pending',

	Constraint fk_order_table Foreign Key (TableId)
		References restaurantschema.RestaurantTables(TableId)
		On Delete Set Null,

	Constraint fk_order_ordertype Foreign Key (OrderTypeId)
		References restaurantschema.OrderTypes(OrderTypeId)
		On Delete Restrict,

	Constraint fk_order_customer Foreign Key (CustomerId)
		References restaurantschema.Customers(CustomerId)
		On Delete Restrict
);

-- M:N: one order can include several menu items, one menu item can appear in many orders (this is effectively the "order items" table).
Create Table restaurantschema.MenuItems_Orders_JunctionTable(
	MenuItemId Bigint,
	OrderId Int,

	Primary Key (MenuItemId, OrderId),

	Constraint fk_menuorder_menuitem Foreign Key (MenuItemId)
		References restaurantschema.MenuItems(MenuItemId)
		On Delete Restrict,

	Constraint fk_menuorder_order Foreign Key (OrderId)
		References restaurantschema.Orders(OrderId)
		On Delete Restrict
);


-- =========================================================
-- 2. INDEXES
-- =========================================================

Create Index idx_staffrest_restaurant On restaurantschema.StaffRestaurantJunctionTable(RestaurantId);
Create Index idx_restmenu_menuitem On restaurantschema.RestaurantMenuItemsJunctionTable(MenuItemId);
Create Index idx_restinv_inventory On restaurantschema.RestaurantInventoryJunctionTable(BasicInventoryId);
Create Index idx_invsup_inventory On restaurantschema.BasicInventoriesSuppliersJunctionTable(BasicInventoryId);

Create Index idx_menuorder_order On restaurantschema.MenuItems_Orders_JunctionTable(OrderId);

Create Index idx_menuingr_ingredient On restaurantschema.MenuItemIngredientsJunctionTable(IngredientId);

Create Index idx_shift_staff On restaurantschema.ShiftSchedules_JunctionTable(StaffId);
Create Index idx_shift_restaurant On restaurantschema.ShiftSchedules_JunctionTable(RestaurantId);

Create Index idx_inventory_ingredient On restaurantschema.BasicInventories(IngredientId);

Create Index idx_reservation_customer On restaurantschema.Reservations(CustomerId);
Create Index idx_reservation_table On restaurantschema.Reservations(TableId);
Create Index idx_feedback_restaurant On restaurantschema.CustomerFeedbacks(RestaurantId);
Create Index idx_orders_customer On restaurantschema.Orders(CustomerId);